--- a/product-api/src/main/resources/application.yml
+++ b/product-api/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8080
+  port: 8081
 
 spring:
   application:
-    name: user-api
+    name: product-api
   jpa:
     show-sql: false
     hibernate:
